# fastapiTemplate

./: .env  .pylintrc  README.md  main.py  pyproject.toml  test.db  utils.py
apis/: base.py
apis/v1/: route_blogs.py  route_users.py
core/: config.py
db/: base_class.py  db_base.py  db_config.py
db/models/: blogs.py  users.py
db/repository/: blogs.py  users_repository.py
schemas/: blogs.py  users.py
tests/: conftest.py  test_user.py
