[tool.poetry]
name = "poetryfastapi-template"
version = "0.1.0"
description = "FastAPI server with Poetry"
authors = ["Jonathan Monroy <jonathan.omj86@gmail.com>"]
readme = "README.md"
packages = [{include = "poetryfastapi_template"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
asyncio = "^3.4.3"
asyncpg = "^0.26.0"
rich = "^12.5.1"
SQLAlchemy = "^1.4.41"
databases = {extras = ["asyncpg"], version = "^0.6.1"}
pydantic = {extras = ["email"], version = "^1.10.2"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pylint = "^2.15.3"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
pytest-asyncio = "^0.19.0"
requests = "^2.28.1"
asyncmock = "^0.4.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
